--- a/style.css
+++ b/style.css
@@ -20,9 +20,11 @@ header {
   width: 100%;
   height: 300px;
   background-color: #f97912;
+  position: fixed;
+z-index: 3;
 }
 
- .title {
+.title {
       font-family: 'bebas_neueregular';
       text-align: center;
       padding-top: 50px;
@@ -42,4 +44,12 @@ h2 {
   display: inline-block;
   width: 100%;
   height: 20px;
+  margin-top: 300px;
+  position: fixed;
+  z-index: 3;
+}
+
+p {
+  padding-top: 350px;
+  z-index: 1;
 }
