--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/*  ------------------------------------------ Font face ------------------------------------------ */
+
+
 @font-face {
     font-family: 'bebas_neueregular';
     src: url('bebasneue-webfont.woff2') format('woff2'),
@@ -5,6 +8,7 @@
     font-weight: normal;
     font-style: normal;
 	}
+  /*  ------------------------------------------ Style global ------------------------------------------ */
 
   *
   {
@@ -15,6 +19,7 @@
   a { text-decoration: none; color : inherit; }
   a:hover { text-decoration: underline; }
 
+  /*  ------------------------------------------ start style ------------------------------------------ */
 
 header {
   width: 100%;
@@ -55,8 +60,25 @@ margin: auto;
 
 }
 
-p {
-  text-align: center;
+.marge {
   padding-top: 350px;
+  text-align: center;
+
+}
+
+h3 {
+  text-align: center;
+}
+
+.textedit {
+  font-weight: bolder;
+  background-color:#f97912;
+}
+.padding {
+  padding-left: 15px;
+}
+p {
+  padding: 5px;
+  text-align: center;
   z-index: 1;
 }
