--- a/style.css
+++ b/style.css
@@ -23,25 +23,20 @@
 
 header {
   width: 100%;
-  height: 300px;
+  height: 120px;
   background-color: #f97912;
   position: fixed;
-z-index: 3;
+  z-index: 3;
 }
 
 .title {
       font-family: 'bebas_neueregular';
       text-align: center;
-      padding-top: 50px;
       color: #fff;
       font-size: 100px;
+      padding-top: 5px;
 }
-h2 {
-  font-family: 'bebas_neueregular';
-  text-align: center;
-  color: #fff;
-  font-size: 50px;
-}
+
 .intro{
 margin-bottom: 50px;
 
@@ -54,7 +49,7 @@ margin-bottom: 50px;
   display: inline-block;
   width: 100%;
   height: 20px;
-  margin-top: 300px;
+  margin-top: 120px;
   position: fixed;
   z-index: 3;
 }
@@ -66,7 +61,7 @@ margin: auto;
 }
 
 .marge {
-  padding-top: 350px;
+  padding-top: 175px;
   text-align: center;
 
 }
@@ -92,7 +87,19 @@ p {
   text-align: center;
   font-family: 'bebas_neueregular';
   color: #f97912;
-  margin-top: 50px;
+  margin-top: 100px;
   font-size: 50px;
   line-height: 0.8em;
+  padding-bottom: 20px;
+}
+
+
+footer {
+  background-color: #f97912 ;
+  height: 450px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  margin-top: 0px;
+  padding-top: 20px;
 }
