--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
       color: #fff;
       font-size: 100px;
       padding-top: 5px;
+      max-width: 100%;
 }
 
 .intro{
@@ -102,4 +103,18 @@ footer {
   padding: 0;
   margin-top: 0px;
   padding-top: 20px;
+}
+
+.copy {
+  font-family: 'bebas_neueregular';
+  color: #fff;
+  font-size: 25px;
+}
+
+
+@media screen and (max-width: 603px) {
+.media {
+  display: none;
+}
+
 }
