--- a/style.css
+++ b/style.css
@@ -1,120 +1,118 @@
 /*  ------------------------------------------ Font face ------------------------------------------ */
 
-
 @font-face {
     font-family: 'bebas_neueregular';
-    src: url('bebasneue-webfont.woff2') format('woff2'),
-         url('bebasneue-webfont.woff') format('woff');
+    src: url('bebasneue-webfont.woff2') format('woff2'), url('bebasneue-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-	}
-  /*  ------------------------------------------ Style global ------------------------------------------ */
+}
 
-  *
-  {
-  	margin : 0; padding : 0; position: relative; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-  img { border : none; vertical-align: middle; }
-  ul { list-style: none; }
-  .clear { clear: both; }
-  a { text-decoration: none; color : inherit; }
-  a:hover { text-decoration: underline; }
+/*  ------------------------------------------ Style global ------------------------------------------ */
 
-  /*  ------------------------------------------ start style ------------------------------------------ */
+* {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+img {
+    border: none;
+    vertical-align: middle;
+}
+ul {
+    list-style: none;
+}
+.clear {
+    clear: both;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+/*  ------------------------------------------ start style ------------------------------------------ */
 
 header {
-  width: 100%;
-  height: 120px;
-  background-color: #f97912;
-  position: fixed;
-  z-index: 3;
+    width: 100%;
+    height: 120px;
+    background-color: #f97912;
+    position: fixed;
+    z-index: 3;
 }
-
 .title {
-      font-family: 'bebas_neueregular';
-      text-align: center;
-      color: #fff;
-      font-size: 100px;
-      padding-top: 5px;
-      max-width: 100%;
+    font-family: 'bebas_neueregular';
+    text-align: center;
+    color: #fff;
+    font-size: 100px;
+    padding-top: 5px;
+    max-width: 100%;
 }
-
-.intro{
-margin-bottom: 50px;
-
-
+.intro {
+    margin-bottom: 50px;
 }
-
 .triangle {
-  background-image: url(triangle.png);
-  background-repeat: repeat-x;
-  display: inline-block;
-  width: 100%;
-  height: 20px;
-  margin-top: 120px;
-  position: fixed;
-  z-index: 3;
+    background-image: url(triangle.png);
+    background-repeat: repeat-x;
+    display: inline-block;
+    width: 100%;
+    height: 20px;
+    margin-top: 120px;
+    position: fixed;
+    z-index: 3;
 }
 .row {
-max-width: 960px;
-margin: auto;
-
-
+    max-width: 960px;
+    margin: auto;
 }
-
 .marge {
-  padding-top: 175px;
-  text-align: center;
-
+    padding-top: 175px;
+    text-align: center;
 }
-
 h3 {
-  text-align: center;
+    text-align: center;
 }
-
 .textedit {
-  font-weight: bolder;
-  background-color:#f97912;
+    font-weight: bolder;
+    background-color: #f97912;
 }
 .padding {
-  padding-left: 15px;
+    padding-left: 15px;
 }
 p {
-  padding: 5px;
-  text-align: center;
-  z-index: 1;
+    padding: 5px;
+    text-align: center;
+    z-index: 1;
 }
-
 .thanks {
-  text-align: center;
-  font-family: 'bebas_neueregular';
-  color: #f97912;
-  margin-top: 100px;
-  font-size: 50px;
-  line-height: 0.8em;
-  padding-bottom: 20px;
+    text-align: center;
+    font-family: 'bebas_neueregular';
+    color: #f97912;
+    margin-top: 100px;
+    font-size: 50px;
+    line-height: 0.8em;
+    padding-bottom: 20px;
 }
-
-
 footer {
-  background-color: #f97912 ;
-  height: 450px;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  margin-top: 0px;
-  padding-top: 20px;
+    background-color: #f97912;
+    height: 450px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    margin-top: 0px;
+    padding-top: 20px;
 }
-
 .copy {
-  font-family: 'bebas_neueregular';
-  color: #fff;
-  font-size: 25px;
+    font-family: 'bebas_neueregular';
+    color: #fff;
+    font-size: 25px;
 }
-
-
 @media screen and (max-width: 603px) {
-.media {
-  display: none;
-}
-
+    .media {
+        display: none;
+    }
 }
